【新增】用户自组注册登录配置
